config: background web app

--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
 <body>
 
     <div id="app">
-        
+        <div class="top-bar">
+
+        </div>
+        <main>
+            
+        </main>
+
     </div>
 
     <script type="text/javascript" src="js/script.js"></script>
