--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- Axios -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js"></script>
 
@@ -26,7 +28,53 @@
 
         </div>
         <main>
-            
+            <div class="container">
+                <nav>
+                    <!-- section my profile -->
+                    <div class="my-profile">
+                        <div class="profile">
+                            <div class="img">
+                                <img src="img/luisa-avatar.png" alt="">
+                            </div>
+                            <div>
+                                <h4>Aurora</h4>
+                            </div>
+                        </div>
+                        <div class="icons">
+                            <i class="fa-solid fa-arrow-rotate-left"></i>
+                            <i class="fa-solid fa-message"></i>
+                            <i class="fa-solid fa-ellipsis-vertical"></i>
+                        </div>
+                    </div>
+
+                    <!-- section notifiche -->
+                    <div class="notifiche">
+                        <div class="bell">
+                            <i class="fa-solid fa-bell-slash"></i>
+                        </div>
+                        <div>
+                            <p>Ricevi notifiche di nuovi messaggi</p>
+                            <a href="#"> Attia notifiche di testo</a>
+                        </div>
+                    </div>
+
+                    <!-- section search -->
+                    <div class="search">
+                        <div>
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                            <input type="text" placeholder="Cerca o inizia una nuova chat">
+                        </div>
+
+                    </div>
+
+
+                </nav>
+                <div class="text-message">
+
+                </div>
+
+            </div>
+
         </main>
 
     </div>
