--- a/index.html
+++ b/index.html
@@ -67,9 +67,120 @@
 
                     </div>
 
+                    <!-- section contacts -->
+                    <div class="contacts">
+                        <div class="contact">
+                            <div class="contact-profile">
+                                <div class="img">
+                                    <img src="img/luisa-avatar.png" alt="">
+                                </div>
+                                <div>
+                                    <h4>Michele</h4>
+                                    <div class="gray">Ultimo messaggio inviato</div>
 
+                                </div>
+
+                            </div>
+                            <div>
+                                <div class="gray">12:00</div>
+                            </div>
+
+                        </div>
+                        <div class="contact">
+                            <div class="contact-profile">
+                                <div class="img">
+                                    <img src="img/luisa-avatar.png" alt="">
+                                </div>
+                                <div>
+                                    <h4>Michele</h4>
+                                    <div class="gray">Ultimo messaggio inviato</div>
+
+                                </div>
+
+                            </div>
+                            <div>
+                                <div class="gray">12:00</div>
+                            </div>
+
+                        </div>
+
+                        <div class="contact">
+                            <div class="contact-profile">
+                                <div class="img">
+                                    <img src="img/luisa-avatar.png" alt="">
+                                </div>
+                                <div>
+                                    <h4>Michele</h4>
+                                    <div class="gray">Ultimo messaggio inviato</div>
+
+                                </div>
+
+                            </div>
+                            <div>
+                                <div class="gray">12:00</div>
+                            </div>
+
+                        </div>
+
+                        <div class="contact">
+                            <div class="contact-profile">
+                                <div class="img">
+                                    <img src="img/luisa-avatar.png" alt="">
+                                </div>
+                                <div>
+                                    <h4>Michele</h4>
+                                    <div class="gray">Ultimo messaggio inviato</div>
+
+                                </div>
+
+                            </div>
+                            <div>
+                                <div class="gray">12:00</div>
+                            </div>
+
+                        </div>
+
+                        <div class="contact">
+                            <div class="contact-profile">
+                                <div class="img">
+                                    <img src="img/luisa-avatar.png" alt="">
+                                </div>
+                                <div>
+                                    <h4>Michele</h4>
+                                    <div class="gray">Ultimo messaggio inviato</div>
+
+                                </div>
+
+                            </div>
+                            <div>
+                                <div class="gray">12:00</div>
+                            </div>
+
+                        </div>
+
+                        <div class="contact">
+                            <div class="contact-profile">
+                                <div class="img">
+                                    <img src="img/luisa-avatar.png" alt="">
+                                </div>
+                                <div>
+                                    <h4>Michele</h4>
+                                    <div class="gray">Ultimo messaggio inviato</div>
+
+                                </div>
+
+                            </div>
+                            <div>
+                                <div class="gray">12:00</div>
+                            </div>
+
+                        </div>
+                    </div>
                 </nav>
+
+                
                 <div class="text-message">
+
 
                 </div>
 
