config: concluso layout

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <div class="my-profile">
                         <div class="profile">
                             <div class="img">
-                                <img src="img/luisa-avatar.png" alt="">
+                                <img src="img/avatar_io.jpg" alt="">
                             </div>
                             <div>
                                 <h4>Aurora</h4>
@@ -72,7 +72,7 @@
                         <div class="contact">
                             <div class="contact-profile">
                                 <div class="img">
-                                    <img src="img/luisa-avatar.png" alt="">
+                                    <img src="img/avatar_io.jpg" alt="">
                                 </div>
                                 <div>
                                     <h4>Michele</h4>
@@ -178,8 +178,55 @@
                     </div>
                 </nav>
 
-                
+
                 <div class="text-message">
+                    <!-- section user chat -->
+                    <div class="user-chat">
+                        <div class="my-profile">
+                            <div class="profile">
+                                <div class="img">
+                                    <img src="img/michele-avatar.jpg" alt="">
+                                </div>
+                                <div>
+                                    <h4>Michele</h4>
+                                    <div class="gray">Ultimo accesso oggi alle 12:00</div>
+                                </div>
+                            </div>
+                            <div class="icons">
+                                <i class="fa-solid fa-magnifying-glass"></i>
+                                <i class="fa-solid fa-paperclip"></i>
+                                <i class="fa-solid fa-ellipsis-vertical"></i>
+                            </div>
+                        </div>
+
+                    </div>
+                    <!-- section area testo -->
+                    <div class="area-testo">
+                        <ul>
+                            <li class="mio-text">
+                                sono io
+                                <div class="orario-message">15:40</div>
+
+                            </li>
+                            <li class="user-text">
+                                sono user
+                                <div class="orario-message">
+                                    15:50
+                                </div>
+                            </li>
+                        </ul>
+
+                    </div>
+                    <!-- section send message -->
+                    <div class="send-message">
+                        <div>
+                            <i class="fa-regular fa-face-smile"></i>
+                        </div>
+                        <input type="text" placeholder="Scrivi un messaggio">
+                        <div>
+                            <i class="fa-solid fa-microphone"></i>
+                        </div>
+                    </div>
 
 
                 </div>
