add: img avatar

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <div class="contact" v-for="contact in contacts">
                             <div class="contact-profile">
                                 <div class="img">
-                                    <img src="contact.avatar" alt="">
+                                    <img :src="contact.avatar" alt="">
                                 </div>
                                 <div>
                                     <h4>{{contact.name}}</h4>
