--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
                     <!-- section contacts -->
                     <div class="contacts">
-                        <div class="contact" v-for="contact in contacts">
+                        <div class="contact" v-for="(contact, i) in contacts" @click="chat(i)">
                             <div class="contact-profile">
                                 <div class="img">
                                     <img :src="contact.avatar" alt="">
@@ -95,10 +95,10 @@
                         <div class="my-profile">
                             <div class="profile">
                                 <div class="img">
-                                    <img src="img/michele-avatar.jpg" alt="">
+                                    <img :src="contacts[activeContact].avatar" alt="">
                                 </div>
                                 <div>
-                                    <h4>Michele</h4>
+                                    <h4>{{contacts[activeContact].name}}</h4>
                                     <div class="gray">Ultimo accesso oggi alle 12:00</div>
                                 </div>
                             </div>
@@ -112,17 +112,12 @@
                     </div>
                     <!-- section area testo -->
                     <div class="area-testo">
-                        <ul>
-                            <li class="mio-text">
-                                sono io
-                                <div class="orario-message">15:40</div>
+                        <ul v-for="element in conversazioneUser">
+                            
+                            <li :class="(element.status === 'sent' ? 'user-text' : 'mio-text')" >
+                               {{element.message}}
+                                <div class="orario-message">{{element.date}}</div>
 
-                            </li>
-                            <li class="user-text">
-                                sono user
-                                <div class="orario-message">
-                                    15:50
-                                </div>
                             </li>
                         </ul>
 
