--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <div class="area-testo">
                         <ul v-for="element in conversazioneUser">
                             
-                            <li :class="(element.status === 'sent' ? 'user-text' : 'mio-text')" >
+                            <li :class="(element.status === 'sent' ? 'mio-text' : 'user-text')" >
                                {{element.message}}
                                 <div class="orario-message">{{element.date}}</div>
 
@@ -127,7 +127,7 @@
                         <div>
                             <i class="fa-regular fa-face-smile"></i>
                         </div>
-                        <input type="text" placeholder="Scrivi un messaggio">
+                        <input type="text" placeholder="Scrivi un messaggio" v-model="mioMessaggio" @keyup.enter="sendMessage(i)">
                         <div>
                             <i class="fa-solid fa-microphone"></i>
                         </div>
