add: testo per eliminare messaggi

--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
                                 <div class="orario-message">{{element.date}}</div>
 
                             </li>
+                            <div>
+                                <p>Message info</p>
+                                <p>Delete message</p>
+                            </div>
                         </ul>
 
                     </div>
