--- a/index.html
+++ b/index.html
@@ -118,11 +118,13 @@
                                {{element.message}}
                                 <div class="orario-message">{{element.date}}</div>
 
+                                <div class="info-message">
+                                    <p>Message info</p>
+                                    <p>Delete message</p>
+                                </div>
+
                             </li>
-                            <div>
-                                <p>Message info</p>
-                                <p>Delete message</p>
-                            </div>
+                           
                         </ul>
 
                     </div>
